Apply fixes for the tests and pom.xml